# lang-rs

./: Cargo.toml  README.md  expand.rs  fib.py  tokens.rs
lang/: Cargo.toml
lang-lexing/: Cargo.toml  README.md
lang-lexing/examples/: lex.rs
lang-lexing/src/: cursor.rs  error.rs  extract.rs  lib.rs  span.rs  string_ext.rs
lang-lexing/src/tokens/: comment.rs  ident.rs  literal.rs  literal_binary.rs  literal_bool.rs  literal_number.rs  literal_string.rs  mod.rs  punct.rs  token.rs  whitespace.rs
lang-macros/: Cargo.toml  pratt.md
lang-macros/src/: lib.rs  utils.rs
lang-macros/src/ast/: codegen.rs  mod.rs  parse.rs
lang-macros/src/derive/: codegen.rs  mod.rs  parse.rs  peek.rs  with_span.rs
lang-macros/src/opcodes/: mod.rs  opcodes.rs  shared.rs
lang-macros/src/pratt/: codegen.rs  mod.rs  parse.rs
lang-macros/src/pratt2/: codegen.rs  mod.rs  parser.rs
lang-macros/src/pratt3/: codegen.rs  mod.rs  parser.rs
lang-macros/src/tokens/: codegen.rs  mod.rs  parser.rs
lang-macros/src/visitor/: mod.rs
lang-parsing/: Cargo.toml
lang-parsing/examples/: parsing.rs
lang-parsing/src/: cursor.rs  error.rs  lib.rs  macros.rs  parse.rs  peek.rs  reader.rs  state.rs  token.rs
lang-parsing/src/tokens/: group.rs  mod.rs  punctuated.rs  ws.rs
lang-shared/: Cargo.toml
lang-shared/src/parsing/: mod.rs
lang-shared/src/tokens/: ident.rs  literal.rs  literal_number.rs  punct.rs  token.rs
lang-vm/: Cargo.toml
lang-vm/examples/: vm.rs  vm2.rs
lang-vm/src/: call_frame.rs  call_stack.rs  error.rs  heap.rs  lib.rs  macros.rs  stack.rs  string_interner.rs  vm.rs
lang-vm/src/bytecode/: chunk.rs  chunk_builder.rs  chunk_reader.rs  execute.rs  function.rs  mod.rs  opcodes.rs  reader.rs
lang-vm/src/bytecode/builder/: bytecode.rs  code.rs  ctx.rs  expression.rs  function.rs  mod.rs  module.rs  section.rs
lang-vm/src/bytecode/builder2/: bytecode.rs  code.rs  ctx.rs  expression.rs  mod.rs  scope.rs  section.rs
lang-vm/src/module/: execute.rs  mod.rs  module.rs
lang-vm/src/native/: mod.rs
lang-vm/src/thread/: bytecode_frame.rs  execute.rs  mod.rs  state.rs  thread.rs  utils.rs
lang-vm/src/value/: callable.rs  closure.rs  mod.rs  string.rs  value.rs
lang/examples/: ast.rs  derive.rs  lang.rs  lang2.rs  pratt.rs  tokens.rs
lang/examples/toybox/: exprs.rs  fib.test  main.rs  stmt.rs  tokens.rs
lang/src/: lib.rs
old/lang-lexing/: Cargo.toml
old/lang-lexing/examples/: test.rs
old/lang-lexing/src/: cursor.rs  cursor2.rs  extract.rs  lexer.rs  lib.rs  span.rs  utils.rs
old/lang-parsing/src/: cursor.rs  error.rs
old/lang-shared/: Cargo.toml
old/lang-shared/examples/: shared.rs
old/lang-shared/src/: lib.rs
old/lang-shared/src/parsing/: punctuated.rs
old/lang-shared/src/tokens/: literal_bool.rs  literal_string.rs  mod.rs  token.rs
