[package]
name = "lang-lexing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tokens = ["bitflags"]
serde = ["dep:serde"]
either = ["dep:either"]
std = []


[dependencies]
unicode-segmentation = { version = "1" }
serde = { version = "1", features = ["derive"], optional = true }
either = { version = "1", optional = true }

bitflags = { version = "2", optional = true }


[[example]]
path = "examples/lex.rs"
name = "lex"
