[package]
name = "lang-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
opcodes = ["Inflector"]
serde = []

[dependencies]
# syn = { version = "1", features = ["full", "derive", "extra-traits"] }
syn = { version = "1", features = [] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "1"
Inflector = { version = "0.11", optional = true }
darling = "0.14"