[package]
name = "lang-parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tokens = ["lang-lexing/tokens", "unicode-segmentation"]

[dependencies]
lang-lexing = { path = "../lang-lexing"}
unicode-segmentation = { version = "1", optional = true }
