[package]
name = "lang-parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["either"]
tokens = ["lang-lexing/tokens", "unicode-segmentation"]
either = ["dep:either", "lang-lexing/either"]
std = []


[dependencies]
lang-lexing = { path = "../lang-lexing"}
unicode-segmentation = { version = "1", optional = true }
either = { version = "1", optional = true}