[package]
name = "lang-parsing"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
tokens = ["lang-lexing/tokens", "unicode-segmentation", "either"]
either = ["dep:either", "lang-lexing/either"]
std = []
serde = ["dep:serde"]


[dependencies]
lang-lexing = { path = "../lang-lexing" }
unicode-segmentation = { version = "1", optional = true }
either = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }


[[example]]
path = "examples/parsing.rs"
name = "parsing"
require-features = ["tokens"]
