[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]
macros = ["lang-macros"]
std = ["lang-lexing/std", "lang-parsing/std"]

[dependencies]
lang-lexing = { path = "../lang-lexing", features = ["alloc"]}
lang-parsing = { path = "../lang-parsing" }
lang-shared = { path = "../lang-shared", features = ["parsing"] }
lang-macros = { path ="../lang-macros", optional = true}


[[example]]
path = "examples/lang.rs"
name = "lang"
required-features = ["macros"]

[[example]]
path = "examples/ast.rs"
name = "ast"
required-features = ["macros"]