[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]
macros = ["lang-macros"]
std = ["lang-lexing/std", "lang-parsing/std"]
serde = ["lang-lexing/serde"]

[dependencies]
lang-lexing = { path = "../lang-lexing", features = ["tokens"]}
lang-parsing = { path = "../lang-parsing", features = ["tokens"] }
lang-macros = { path ="../lang-macros", optional = true}


[[example]]
path = "examples/lang.rs"
name = "lang"
required-features = ["macros"]


[[example]]
path = "examples/lang2.rs"
name = "lang2"
required-features = ["macros"]


[[example]]
path = "examples/ast.rs"
name = "ast"
required-features = ["macros"]

[[example]]
path = "examples/tokens.rs"
name = "tokens"
required-features = ["macros"]


[[example]]
path = "examples/derive.rs"
name = "derive"
required-features = ["macros"]