[package]
name = "lang-lexing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []
std = []
serde = ["dep:serde"]

[dependencies]
unicode-segmentation = { version = "1" }
serde = { version = "1", features = ["derive"], optional = true}