[package]
name = "lang-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
parsing = ["lang-parsing", "unicode-segmentation"]
serde = ["dep:serde", "lang-lexing/serde"]

[dependencies]
lang-lexing = { path = "../lang-lexing" }
lang-parsing = { path = "../lang-parsing", optional = true }
unicode-segmentation = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true}

[[example]]
path = "examples/shared.rs"
name = "shared"
required-features = ["parsing"]